[gd_scene load_steps=18 format=3 uid="uid://b8i5nxc1e81sq"]

[ext_resource type="Script" path="res://core/map_viewer.gd" id="1_rviey"]
[ext_resource type="FontFile" uid="uid://bevdxpypkmjw5" path="res://assets/fonts/fredoka_one.ttf" id="1_unbgg"]
[ext_resource type="Texture2D" uid="uid://c2guis3h74lep" path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/folder_voxel.png" id="2_3vroi"]
[ext_resource type="Texture2D" uid="uid://c33fku4qngxj7" path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/arrow_play.png" id="3_weifl"]
[ext_resource type="Script" path="res://core/camera.gd" id="5_1d51q"]
[ext_resource type="Texture2D" uid="uid://nxiceoxl4cv0" path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/exit.png" id="5_56eof"]
[ext_resource type="Script" path="res://addons/qodot/src/nodes/qodot_map.gd" id="7_buhxc"]
[ext_resource type="Resource" uid="uid://cwkhcm4yps6w3" path="res://trenchbroom/toonbox_fgd.tres" id="8_43i5p"]
[ext_resource type="Texture2D" uid="uid://dbhbhckanwg5w" path="res://textures/blockout/black_check.png" id="9_v8ffw"]
[ext_resource type="Script" path="res://addons/qodot/src/nodes/qodot_entity.gd" id="10_5kvj6"]
[ext_resource type="Script" path="res://addons/qodot/game_definitions/fgd/point_classes/light.gd" id="11_g5dld"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_axycu"]
uv1_triplanar = true
uv1_world_triplanar = true
uv2_triplanar = true
uv2_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nhpme"]
albedo_texture = ExtResource("9_v8ffw")
uv1_triplanar = true
uv1_world_triplanar = true
uv2_triplanar = true
uv2_world_triplanar = true
texture_filter = 5

[sub_resource type="ArrayMesh" id="ArrayMesh_4x1x6"]
_surfaces = [{
"aabb": AABB(-8, -1, -9, 16, 6, 17),
"attribute_data": PackedByteArray(0, 0, 0, 191, 0, 0, 128, 189, 0, 0, 0, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 128, 189, 0, 0, 0, 191, 0, 0, 128, 189, 0, 0, 0, 63, 0, 0, 128, 189, 0, 0, 0, 63, 0, 0, 128, 61, 0, 0, 0, 191, 0, 0, 128, 61, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 128, 189, 0, 0, 0, 191, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 128, 61, 0, 0, 0, 63, 0, 0, 128, 189, 0, 0, 0, 191, 0, 0, 128, 189, 0, 0, 0, 63, 0, 0, 128, 189, 0, 0, 0, 63, 0, 0, 128, 61, 0, 0, 0, 191, 0, 0, 128, 61, 0, 0, 0, 0, 0, 0, 128, 190, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 0, 191, 0, 0, 128, 190, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 16, 191, 0, 0, 0, 0, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 0, 191, 0, 0, 128, 190, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 16, 191, 0, 0, 0, 0, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 128, 190, 0, 0, 0, 0, 0, 0, 128, 190, 0, 0, 128, 62, 0, 0, 128, 190, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 160, 190, 0, 0, 0, 0, 0, 0, 128, 190, 0, 0, 128, 62, 0, 0, 128, 190, 0, 0, 128, 62, 0, 0, 160, 190, 0, 0, 16, 191, 0, 0, 160, 190, 0, 0, 128, 190, 0, 0, 160, 190, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 0, 0, 0, 0, 128, 190, 0, 0, 0, 0, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 0, 0, 0, 0, 16, 191, 0, 0, 0, 0, 0, 0, 16, 191, 0, 0, 160, 190, 0, 0, 16, 191, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 128, 190, 0, 0, 160, 190, 0, 0, 0, 0, 0, 0, 160, 190, 0, 0, 128, 62, 0, 0, 160, 190, 0, 0, 128, 62, 0, 0, 128, 190, 0, 0, 0, 0, 0, 0, 128, 190),
"format": 4119,
"index_count": 108,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 36, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 40, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 44, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 48, 0, 50, 0, 51, 0, 52, 0, 53, 0, 54, 0, 52, 0, 54, 0, 55, 0, 56, 0, 57, 0, 58, 0, 56, 0, 58, 0, 59, 0, 60, 0, 61, 0, 62, 0, 60, 0, 62, 0, 63, 0, 64, 0, 65, 0, 66, 0, 64, 0, 66, 0, 67, 0, 68, 0, 69, 0, 70, 0, 68, 0, 70, 0, 71, 0),
"material": SubResource("StandardMaterial3D_nhpme"),
"primitive": 3,
"vertex_count": 72,
"vertex_data": PackedByteArray(0, 0, 0, 193, 0, 0, 128, 63, 0, 0, 0, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 193, 0, 0, 128, 191, 0, 0, 0, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 65, 0, 0, 128, 191, 0, 0, 0, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 65, 0, 0, 128, 63, 0, 0, 0, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 193, 0, 0, 128, 63, 0, 0, 0, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 193, 0, 0, 128, 63, 0, 0, 0, 65, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 193, 0, 0, 128, 191, 0, 0, 0, 65, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 193, 0, 0, 128, 191, 0, 0, 0, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 65, 0, 0, 128, 191, 0, 0, 0, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 193, 0, 0, 128, 191, 0, 0, 0, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 193, 0, 0, 128, 191, 0, 0, 0, 65, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 65, 0, 0, 128, 191, 0, 0, 0, 65, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 65, 0, 0, 128, 63, 0, 0, 0, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 65, 0, 0, 128, 63, 0, 0, 0, 65, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 193, 0, 0, 128, 63, 0, 0, 0, 65, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 193, 0, 0, 128, 63, 0, 0, 0, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 65, 0, 0, 128, 63, 0, 0, 0, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 0, 65, 0, 0, 128, 191, 0, 0, 0, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 0, 65, 0, 0, 128, 191, 0, 0, 0, 65, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 0, 65, 0, 0, 128, 63, 0, 0, 0, 65, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 0, 193, 0, 0, 128, 63, 0, 0, 0, 65, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 65, 0, 0, 128, 63, 0, 0, 0, 65, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 65, 0, 0, 128, 191, 0, 0, 0, 65, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 193, 0, 0, 128, 191, 0, 0, 0, 65, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 128, 0, 0, 0, 128, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 16, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 0, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 128, 0, 0, 0, 128, 0, 0, 16, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 16, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 128, 0, 0, 0, 128, 0, 0, 16, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 0, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 16, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 16, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 16, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 16, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 0, 193, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 0, 193, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 64, 0, 0, 0, 0, 0, 0, 0, 193, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 0, 193, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 0, 0, 0, 160, 64, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 128, 64, 0, 0, 160, 64, 0, 0, 16, 193, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 0, 0, 0, 0, 160, 64, 0, 0, 16, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 160, 64, 0, 0, 128, 192, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 128, 0, 0, 128, 64, 0, 0, 128, 192, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 16, 193, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 16, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 0, 0, 0, 128, 64, 0, 0, 16, 193, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 0, 128, 0, 0, 128, 64, 0, 0, 128, 192, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 128, 192, 255, 127, 0, 0, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 160, 64, 0, 0, 16, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 64, 0, 0, 160, 64, 0, 0, 128, 192, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 160, 64, 0, 0, 128, 192, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 0, 0, 0, 0, 160, 64, 0, 0, 16, 193, 255, 127, 255, 255, 255, 127, 255, 191, 0, 0, 128, 64, 0, 0, 160, 64, 0, 0, 16, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 16, 193, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 128, 192, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 128, 64, 0, 0, 160, 64, 0, 0, 128, 192, 255, 255, 255, 127, 255, 127, 255, 63, 0, 0, 0, 0, 0, 0, 160, 64, 0, 0, 128, 192, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 64, 0, 0, 160, 64, 0, 0, 128, 192, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 128, 192, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 128, 0, 0, 128, 64, 0, 0, 128, 192, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_81410"]
points = PackedVector3Array(-8, 1, -8, -8, -1, -8, 8, -1, -8, 8, 1, -8, -8, 1, 8, -8, -1, 8, 8, -1, 8, 8, 1, 8)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_llhl2"]
points = PackedVector3Array(0, 4, -9, 0, 0, -9, 4, 0, -9, 4, 4, -9, 0, 4, -8, 0, 0, -8, 4, 0, -8, 4, 4, -8)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_yjk1y"]
points = PackedVector3Array(0, 5, -9, 0, 4, -9, 4, 4, -9, 4, 5, -9, 0, 5, -4, 0, 4, -4, 4, 4, -4, 4, 5, -4)

[node name="Map Viewer" type="Node3D"]
script = ExtResource("1_rviey")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bottombar" type="Panel" parent="Control"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -46.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Control/Bottombar"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_unbgg")
theme_override_font_sizes/font_size = 24
text = "toonbox"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Control" parent="Control/Bottombar"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 455.0
grow_vertical = 2

[node name="MapFilePath" type="LineEdit" parent="Control/Bottombar/Controls"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -16.0
offset_right = 279.0
offset_bottom = 15.0
grow_vertical = 2
placeholder_text = "Insert Map File Here"
editable = false

[node name="Button" type="Button" parent="Control/Bottombar/Controls"]
layout_mode = 0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 7.0
offset_right = 335.0
offset_bottom = -8.0
grow_vertical = 2
icon = ExtResource("2_3vroi")
icon_alignment = 1

[node name="Button2" type="Button" parent="Control/Bottombar/Controls"]
layout_mode = 0
anchor_bottom = 1.0
offset_left = 343.0
offset_top = 7.0
offset_right = 390.0
offset_bottom = -8.0
grow_vertical = 2
icon = ExtResource("3_weifl")
icon_alignment = 1

[node name="Button3" type="Button" parent="Control/Bottombar/Controls"]
layout_mode = 0
anchor_bottom = 1.0
offset_left = 399.0
offset_top = 7.0
offset_right = 446.0
offset_bottom = -8.0
grow_vertical = 2
icon = ExtResource("5_56eof")
icon_alignment = 1

[node name="FileDialog" type="FileDialog" parent="Control"]
title = "Open a File"
size = Vector2i(450, 350)
min_size = Vector2i(450, 350)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.map")
show_hidden_files = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.957591, 0.288129, 0, -0.288129, 0.957591, 0, 8.49166, 9.91567)
script = ExtResource("5_1d51q")

[node name="QodotMap" type="Node3D" parent="."]
script = ExtResource("7_buhxc")
map_file = "C:/sunaba/maps/test.map"
inverse_scale_factor = 16.0
entity_fgd = ExtResource("8_43i5p")
base_texture_dir = "res://textures"
texture_file_extensions = PackedStringArray("png")
worldspawn_layers = []
brush_clip_texture = "special/clip"
face_skip_texture = "special/skip"
texture_wads = []
material_file_extension = "tres"
unshaded = false
default_material_albedo_uniform = ""
default_material = SubResource("StandardMaterial3D_axycu")
uv_unwrap_texel_size = 1.0
print_profiling_data = false
use_trenchbroom_group_hierarchy = false
tree_attach_batch_size = null
set_owner_batch_size = 1000

[node name="entity_0_worldspawn" type="StaticBody3D" parent="QodotMap"]

[node name="entity_0_mesh_instance" type="MeshInstance3D" parent="QodotMap/entity_0_worldspawn"]
mesh = SubResource("ArrayMesh_4x1x6")

[node name="entity_0_brush_0_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_81410")

[node name="entity_0_brush_1_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_llhl2")

[node name="entity_0_brush_2_collision_shape" type="CollisionShape3D" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_yjk1y")

[node name="entity_1_an_day" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 1.5, -3.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "an_day",
"origin": "-56 56 24"
}

[node name="entity_2_ev_day" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 1.5, -2.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "ev_day",
"origin": "-40 56 24"
}

[node name="entity_3_sp_player" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1.5, 2.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "sp_player",
"origin": "40 -40 24"
}

[node name="entity_4_wp_pistol" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1.5, 4.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "wp_pistol",
"origin": "72 72 24"
}

[node name="entity_5_wp_dartgun" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1.5, 3.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "wp_dartgun",
"origin": "56 72 24"
}

[node name="entity_6_wp_pbgun" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1.5, 2.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "wp_pbgun",
"origin": "40 72 24"
}

[node name="entity_7_ai_imagebot" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 1.5, -5.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "ai_imagebot",
"origin": "-88 88 24"
}

[node name="entity_8_ai_bot" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 1.5, -5.5)
script = ExtResource("10_5kvj6")
properties = {
"classname": "ai_bot",
"origin": "-88 -88 24"
}

[node name="entity_9_light" type="Node3D" parent="QodotMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3.5, -6)
script = ExtResource("11_g5dld")

[connection signal="pressed" from="Control/Bottombar/Controls/Button" to="." method="open_file_dialog"]
[connection signal="pressed" from="Control/Bottombar/Controls/Button2" to="." method="load_map"]
[connection signal="pressed" from="Control/Bottombar/Controls/Button3" to="." method="exit"]
[connection signal="file_selected" from="Control/FileDialog" to="." method="set_map_path"]
